--- a/source/slurm.conf
+++ b/source/slurm.conf
@@ -79,11 +79,11 @@ JobCompType=jobcomp/none
 #JobCompLoc=
 #
 # ACCOUNTING
-#JobAcctGatherType=jobacct_gather/linux
-#JobAcctGatherFrequency=30
+JobAcctGatherType=jobacct_gather/linux
+JobAcctGatherFrequency=30
 #
-#AccountingStorageType=accounting_storage/slurmdbd
-#AccountingStorageHost=
+AccountingStorageType=accounting_storage/slurmdbd
+AccountingStorageHost=metadata
 #AccountingStorageLoc=
 #AccountingStoragePass=
 #AccountingStorageUser=
