--- a/source/slurm.conf
+++ b/source/slurm.conf
@@ -93,4 +93,5 @@ NodeName=linux[1-32] Procs=1 State=UNKNOWN
 NodeName=metadata NodeAddr=192.168.1.2 CPUs=4 State=UNKNOWN
 NodeName=compute-1 NodeAddr=192.168.1.4 CPUs=4 State=UNKNOWN
 NodeName=compute-2 NodeAddr=192.168.1.5 CPUs=4 State=UNKNOWN
+NodeName=compute-3 NodeAddr=192.168.1.6 CPUs=4 State=UNKNOWN
 PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP
